MDEV-26575 Crash on shutdown after starting an XA transaction

Disallow XA when Galera library is loaded.

Reviewed-by: Jan Lindström <jan.lindstrom@mariadb.com>